<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/flutterFragment"
        android:icon="@drawable/flutter"
        android:title="@string/flutter" />
    <item
        android:id="@+id/androidFragment"
        android:icon="@drawable/android"
        android:title="@string/android" />
    <item
        android:id="@+id/experienceFragment"
        android:icon="@drawable/experience"
        android:title="@string/experience" />
    <item
        android:id="@+id/uiUxFragment"
        android:icon="@drawable/uiux"
        android:title="@string/ui_ux" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/setting"
        android:title="@string/setting" />
</menu>